# ci_manager

./: Cargo.toml  README.md  config.example
src/: config.rs  lib.rs  main.rs  services.rs
src/handlers/: approve.rs  mod.rs  status.rs
src/services/: circleci.rs  github.rs
