[package]
name = "ci_manager"
version = "0.1.0"
authors = ["James Tan <james_tan97@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.6"
shellexpand = "2.0.0"
reqwest = { version = "0.10.8", features = ["json"] } 
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }

